# cv-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt
functions/: stage_a_guardrails.py  stage_b_generation.py  stage_c_validation.py  stage_d_packaging.py
functions/utils/: __init__.py  baseline_renderer.py  claims.py  common.py  experience_functions.py  fallbacks.py  jd_matching.py  language_tone.py  llm_client.py  llm_metrics.py  prompts_builder.py  quality_metrics.py  safe_truncate.py  security_functions.py  skills_formatting.py
local_cv_templates/: __init__.py  cv_templates.py  cv_templates.yaml
local_cv_templates/templates/: double.jinja2  minimalist.jinja2  modern.jinja2
parameters/: alias_mapping.yaml  parameters.yaml  prompts.yaml
schemas/: __init__.py  cv_template_schema.py  input_schema.py  internal_schema.py  output_schema.py
tests/: mock_api_generate_cv.py  mock_api_generate_cv_v2.py  mock_api_generate_cv_v3.py  mock_api_generate_cv_v4.py  test_claims_utils.py  test_common.py  test_cv_templates.py  test_llm_metrics.py  test_prompts_builder_utils.py  test_quality_metrics.py  test_security_functions.py  test_stage_a_guardrails.py  test_stage_b_claims_and_justifications.py  test_stage_b_generation.py  test_stage_b_parameters_and_io.py  test_stage_c_validation.py  test_stage_d_packaging.py  test_utils.py  test_utils_jd_matching.py  test_utils_language_tone.py  test_utils_skills_formatting.py  utils_test_support.py
tests/api_payload_tests/: test2.json  test3.json  test4.json  test5.json  test6.json  (+2 more)
(+9 files in other folders)
