[project]
name = "eport-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.121.0",
    "google-ai-generativelanguage==0.6.15",
    "google-generativeai==0.8.5",
    "jinja2>=3.1.6",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "tree>=0.2.4",
    # Added for FastAPI server runtime
    "uvicorn[standard]>=0.32.0",
]
